--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "array-last",
-  "description": "Get the last element in an array.",
-  "version": "0.1.0",
+  "description": "Get the last or last n elements in an array.",
+  "version": "1.0.0",
   "homepage": "https://github.com/jonschlinkert/array-last",
   "author": {
     "name": "Jon Schlinkert",
@@ -14,21 +14,10 @@
   "bugs": {
     "url": "https://github.com/jonschlinkert/array-last/issues"
   },
-  "licenses": [
-    {
-      "type": "MIT",
-      "url": "https://github.com/jonschlinkert/array-last/blob/master/LICENSE-MIT"
-    }
-  ],
-  "keywords": [
-    "docs",
-    "documentation",
-    "generate",
-    "generator",
-    "markdown",
-    "templates",
-    "verb"
-  ],
+  "license": {
+    "type": "MIT",
+    "url": "https://github.com/jonschlinkert/array-last/blob/master/LICENSE-MIT"
+  },
   "main": "index.js",
   "engines": {
     "node": ">=0.10.0"
@@ -37,11 +26,21 @@
     "test": "mocha -R spec"
   },
   "devDependencies": {
-    "chai": "~1.9.1",
-    "gulp": "^3.8.5",
-    "gulp-es6-module-transpiler": "^0.1.2",
-    "gulp-traceur": "^0.7.0",
     "mocha": "*",
+    "should": "^4.3.1",
     "verb": "~0.2.6"
-  }
+  },
+  "dependencies": {
+    "array-slice": "^0.2.2",
+    "is-number": "^0.1.1"
+  },
+  "keywords": [
+    "docs",
+    "documentation",
+    "generate",
+    "generator",
+    "markdown",
+    "templates",
+    "verb"
+  ]
 }
