--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "array-last",
   "description": "Get the last or last n elements in an array.",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "homepage": "https://github.com/jonschlinkert/array-last",
   "author": {
     "name": "Jon Schlinkert",
@@ -27,8 +27,7 @@
   },
   "devDependencies": {
     "mocha": "*",
-    "should": "^4.3.1",
-    "verb": "~0.2.6"
+    "should": "^4.3.1"
   },
   "dependencies": {
     "array-slice": "^0.2.2",
