--- a/.jshintrc
+++ b/.jshintrc
@@ -1,22 +1,20 @@
 {
   "esnext": true,
   "boss": true,
-  "curly": true,
+  "curly": false,
   "eqeqeq": true,
   "eqnull": true,
   "immed": true,
-  "latedef": true,
+  "indent": 2,
+  "latedef": false,
   "newcap": true,
   "noarg": true,
   "node": true,
   "sub": true,
   "undef": true,
   "unused": true,
-  "globals": {
-    "define": true,
-    "before": true,
-    "after": true,
-    "describe": true,
-    "it": true
-  }
+  "mocha": true,
+  "asi": false,
+  "laxbreak": true,
+  "laxcomma": false
 }
