--- a/package.json
+++ b/package.json
@@ -3,35 +3,29 @@
   "description": "Get the last or last n elements in an array.",
   "version": "1.0.2",
   "homepage": "https://github.com/jonschlinkert/array-last",
-  "author": {
-    "name": "Jon Schlinkert",
-    "url": "https://github.com/jonschlinkert"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git://github.com/jonschlinkert/array-last.git"
-  },
+  "author": "Jon Schlinkert (https://github.com/jonschlinkert)",
+  "repository": "jonschlinkert/array-last",
   "bugs": {
     "url": "https://github.com/jonschlinkert/array-last/issues"
   },
-  "license": {
-    "type": "MIT",
-    "url": "https://github.com/jonschlinkert/array-last/blob/master/LICENSE-MIT"
-  },
+  "license": "MIT",
+  "files": [
+    "index.js"
+  ],
   "main": "index.js",
   "engines": {
     "node": ">=0.10.0"
   },
   "scripts": {
-    "test": "mocha -R spec"
-  },
-  "devDependencies": {
-    "mocha": "*",
-    "should": "^4.3.1"
+    "test": "mocha"
   },
   "dependencies": {
     "array-slice": "^0.2.2",
     "is-number": "^0.1.1"
+  },
+  "devDependencies": {
+    "mocha": "*",
+    "should": "*"
   },
   "keywords": [
     "array",
@@ -45,5 +39,11 @@
     "util",
     "utility",
     "utils"
-  ]
+  ],
+  "verb": {
+    "related": {
+      "description": "",
+      "list": []
+    }
+  }
 }
