--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "homepage": "https://github.com/jonschlinkert/array-last",
   "author": "Jon Schlinkert (https://github.com/jonschlinkert)",
   "repository": "jonschlinkert/array-last",
-  "bugs": "https://github.com/jonschlinkert/array-last/issues",
+  "bugs": {
+    "url": "https://github.com/jonschlinkert/array-last/issues"
+  },
   "license": "MIT",
   "files": [
     "index.js"
@@ -24,6 +26,7 @@
     "ansi-bold": "^0.1.1",
     "array-slice": "^0.2.3",
     "benchmarked": "^0.1.4",
+    "gulp-format-md": "^0.1.7",
     "matched": "^0.3.2",
     "mocha": "*"
   },
@@ -41,13 +44,27 @@
     "utils"
   ],
   "verb": {
+    "run": true,
+    "toc": false,
+    "layout": "default",
+    "tasks": [
+      "readme"
+    ],
+    "plugins": [
+      "gulp-format-md"
+    ],
     "related": {
       "list": [
         "arr-union",
         "array-unique",
         "array-xor"
-      ],
-      "description": ""
+      ]
+    },
+    "reflinks": [
+      "verb"
+    ],
+    "lint": {
+      "reflinks": true
     }
   }
 }
