--- a/package.json
+++ b/package.json
@@ -4,6 +4,12 @@
   "version": "1.2.1",
   "homepage": "https://github.com/jonschlinkert/array-last",
   "author": "Jon Schlinkert (https://github.com/jonschlinkert)",
+  "contributors": [
+    "Ben Drucker (http://www.bendrucker.me)",
+    "Blaine Bublitz (https://twitter.com/BlaineBublitz)",
+    "Jon Schlinkert (http://twitter.com/jonschlinkert)",
+    "Stephen A. Wilson (https://github.com/SpyMaster356)"
+  ],
   "repository": "jonschlinkert/array-last",
   "bugs": {
     "url": "https://github.com/jonschlinkert/array-last/issues"
